# tap-activitywatch

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test-tap.yml
tap_activitywatch/: streams.py  tap.py
tap_activitywatch/tests/: __init__.py  test_core.py
