[tool.poetry]
name = "tap-activitywatch"
version = "0.0.1"
description = "`tap-activitywatch` is a Singer tap for ActivityWatch, built with the Meltano SDK for Singer Taps."
authors = ["Collin Prather"]
keywords = [
    "ELT",
    "ActivityWatch",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
singer-sdk = "^0.3.17"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
pytest = "^6.2.5"
isort = "^5.10.1"
black = "^21.9b0"
mypy = "^0.910"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_sleeper"

[build-system]
# Uncomment the pinned version in favor of the git URL once
# https://github.com/python-poetry/poetry-core/pull/257 is merged
# and a new poetry-core 1.0.x is released
# requires = ["poetry-core>=1.0.0"]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-activitywatch = 'tap_activitywatch.tap:TapActivityWatch.cli'
